--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bytes": "^3.0.0",
     "concurrently": "^3.6.0",
     "cookie-session": "^2.0.0-beta.3",
-    "express": "^4.16.3", 
+    "express": "^4.16.3",
     "mongoose": "^5.1.4",
     "nodemon": "^1.17.5",
     "passport": "^0.4.0",
